tests/golden/invalid/unknown-var-01.rego
package fregot.tests.invalid.unknown_var_01

test_a {
  b
}
